--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -87,15 +87,15 @@
         tools:replace="android:icon, android:theme,android:label">
 
         <!-- 以下友盟推送 -->
-        <meta-data
-            android:name="UMENG_APPKEY"
-            android:value="58b917eaf5ade45a1f000489" />
-        <meta-data
-            android:name="UMENG_MESSAGE_SECRET"
-            android:value="9762ad27d9de2f4b06d393d156fd6968" />
-        <meta-data
-            android:name="UMENG_CHANNEL"
-            android:value="Umeng" />
+        <!--    <meta-data
+                android:name="UMENG_APPKEY"
+                android:value="58b917eaf5ade45a1f000489" />
+            <meta-data
+                android:name="UMENG_MESSAGE_SECRET"
+                android:value="9762ad27d9de2f4b06d393d156fd6968" />
+            <meta-data
+                android:name="UMENG_CHANNEL"
+                android:value="Umeng" />-->
         <!-- 以上友盟推送 -->
 
         <activity
@@ -240,6 +240,7 @@
 
         <activity
             android:name=".main.message.MessageActivity"
+            android:exported="true"
             android:theme="@style/Transparent" />
 
         <activity
@@ -251,6 +252,21 @@
             android:name=".main.services.ServicesActivity"
             android:launchMode="singleTop"
             android:theme="@style/Transparent" />
+
+        <!-- 消息接收监听器 （用户可自主扩展） 2017.09.27添加-->
+        <receiver
+            android:name="com.aglhz.yicommunity.broadcast.NotificationReceiver"
+            android:exported="false"> <!-- 为保证receiver安全，建议设置不可导出，如需对其他应用开放可通过android：permission进行限制 -->
+            <intent-filter>
+                <action android:name="com.alibaba.push2.action.NOTIFICATION_OPENED" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="com.alibaba.push2.action.NOTIFICATION_REMOVED" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="com.alibaba.sdk.android.push.RECEIVE" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
