--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
         debug {
             keyAlias 'agl'
             keyPassword 'aglandroid'
-            storeFile file('F:/gaocheng/agl.keystore')
+            storeFile file('D:/Android/Workspace/gckj/agl.keystore')
             storePassword 'aglandroid'
         }
         release {
@@ -24,8 +24,8 @@ android {
         applicationId "com.aglhz.yicommunity"
         minSdkVersion 17
         targetSdkVersion 22
-        versionCode 217
-        versionName "2.1.7"
+        versionCode 218
+        versionName "2.1.8"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 //        ndk {
 //            abiFilters 'armeabi', 'armeabi-v7a', 'x86'
@@ -56,7 +56,8 @@ android {
             buildConfigField "boolean", "isDebug", "false"//配置自定义debug版下的字段。
 
             ndk {
-                abiFilters "armeabi", "armeabi-v7a", "x86"
+//                abiFilters "armeabi", "armeabi-v7a", "x86"
+                abiFilters "armeabi"
             }
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
