--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,13 +7,13 @@ android {
         debug {
             keyAlias 'agl'
             keyPassword 'aglandroid'
-            storeFile file('D:/Android/Workspace/gckj/agl.keystore')
+            storeFile file('F:/gaocheng/agl.keystore')
             storePassword 'aglandroid'
         }
         release {
             keyAlias 'agl'
             keyPassword 'aglandroid'
-            storeFile file('D:/Android/Workspace/gckj/agl.keystore')
+            storeFile file('F:/gaocheng/agl.keystore')
             storePassword 'aglandroid'
         }
     }
@@ -78,10 +78,11 @@ dependencies {
     debugCompile project(path: ':abase', configuration: 'debug')
     releaseCompile project(path: ':abase', configuration: 'release')
     //友盟推送
+
     //    compile project(':PushSDK')
+
     //阿里云推送
     compile project(':apush')
-
     //黄油刀系列
     compile 'com.jakewharton:butterknife:8.4.0'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
@@ -121,6 +122,7 @@ dependencies {
     //配合更新库使用，后期要内化掉。
 
     //todo(高亮)ssssssssssssssssssssss 以下为s1相关 sssssssssssssssssssssssssssss
+
     //progress-button
     compile 'com.github.dmytrodanylyk.circular-progress-button:library:1.1.3'
     //页面状态管理
