--- a/apush/src/main/AndroidManifest.xml
+++ b/apush/src/main/AndroidManifest.xml
@@ -18,22 +18,23 @@
 
         <activity
             android:name="cn.itsite.apush.PopupPushActivity"
-            android:exported="true" />
+            android:exported="true"
+            android:theme="@android:style/Theme.NoDisplay" />
 
         <!-- 消息接收监听器 （用户可自主扩展） -->
-   <!--     <receiver
-            android:name=".MyMessageReceiver"
-            android:exported="false"> &lt;!&ndash; 为保证receiver安全，建议设置不可导出，如需对其他应用开放可通过android：permission进行限制 &ndash;&gt;
-            <intent-filter>
-                <action android:name="com.alibaba.push2.action.NOTIFICATION_OPENED" />
-            </intent-filter>
-            <intent-filter>
-                <action android:name="com.alibaba.push2.action.NOTIFICATION_REMOVED" />
-            </intent-filter>
-            <intent-filter>
-                <action android:name="com.alibaba.sdk.android.push.RECEIVE" />
-            </intent-filter>
-        </receiver>-->
+        <!--     <receiver
+                 android:name=".MyMessageReceiver"
+                 android:exported="false"> &lt;!&ndash; 为保证receiver安全，建议设置不可导出，如需对其他应用开放可通过android：permission进行限制 &ndash;&gt;
+                 <intent-filter>
+                     <action android:name="com.alibaba.push2.action.NOTIFICATION_OPENED" />
+                 </intent-filter>
+                 <intent-filter>
+                     <action android:name="com.alibaba.push2.action.NOTIFICATION_REMOVED" />
+                 </intent-filter>
+                 <intent-filter>
+                     <action android:name="com.alibaba.sdk.android.push.RECEIVE" />
+                 </intent-filter>
+             </receiver>-->
 
     </application>
 
