--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -382,6 +382,10 @@
             android:name="com.aglhz.s1.camera.CameraPlayActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.Transparent" />
+        <activity
+            android:name="com.aglhz.s1.camera.CameraPlayActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.Transparent" />
 
         <activity android:name="com.aglhz.s1.camera.PlayBackActivity" />
 
