--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -382,9 +382,12 @@
             android:name="com.aglhz.s1.camera.CameraPlayActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.Transparent" />
-
+        <activity
+            android:name="com.aglhz.s1.camera.CameraPlay2Activity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.Transparent" />
         <activity android:name="com.aglhz.s1.camera.PlayBackActivity" />
-
+        <activity android:name="com.aglhz.s1.camera.CameraSettingActivity" />
         <!-- 消息接收监听器 （用户可自主扩展） 2017.09.27添加-->
         <receiver
             android:name="com.aglhz.yicommunity.broadcast.NotificationReceiver"
