--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
         debug {
             keyAlias 'agl'
             keyPassword 'aglandroid'
-            storeFile file('D:/Android/Workspace/gckj/agl.keystore')
+            storeFile file('F:/gaocheng/agl.keystore')
             storePassword 'aglandroid'
         }
         release {
@@ -131,11 +131,8 @@ dependencies {
     compile 'com.github.jwkj:SoundWaveSender:v2.0.2'
     //声波配网库说依赖的udp通讯库，不可删除
     compile 'com.jwkj:udpsender:v2.0.1'
-
     //自定义车牌键盘。
     compile 'com.github.leguang:AKeyboard:0.0.3'
     //orm框架
     compile 'org.litepal.android:core:1.6.0'
-
-
 }
