--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -162,9 +162,9 @@
 
     <!--以下为小米推送所需权限-->
     <permission
-        android:name="com.aglhz.s1.permission.MIPUSH_RECEIVE"
+        android:name="com.aglhz.yicommunity.permission.MIPUSH_RECEIVE"
         android:protectionLevel="signature" />
-    <uses-permission android:name="com.aglhz.s1.permission.MIPUSH_RECEIVE" />
+    <uses-permission android:name="com.aglhz.yicommunity.permission.MIPUSH_RECEIVE" />
     <!--以上为小米推送所需权限-->
 
     <application
