--- a/apush/build.gradle
+++ b/apush/build.gradle
@@ -28,7 +28,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -42,8 +42,8 @@ dependencies {
     compile 'com.aliyun.ams:alicloud-android-ut:5.1.0'
     //集成阿里云的辅助通道，对接小米/华为推送。
     //在集成了自己的小米推送了，这个就不能再引用了，否则会因为重复引用而冲突。
-//    compile 'com.aliyun.ams:alicloud-android-third-push:3.0.5@aar'
-
+    //    compile 'com.aliyun.ams:alicloud-android-third-push:3.0.5@aar'
     //集成华为推送。
     compile 'com.huawei.android.hms:push:2.5.2.300'
+    compile files('libs/MiPush_SDK_Client_3_5_1.jar')
 }
