add MiPush sdk.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 *.iml
 .gradle
 /local.properties
@@ -8,7 +7,6 @@
 /build
 /captures
 .externalNativeBuild
-=======
 # Built application files
 *.apk
 *.ap_
@@ -44,13 +42,9 @@ proguard/
 captures/
 
 # Intellij
-*.iml
 .idea/workspace.xml
 
 # Keystore files
 *.jks
->>>>>>> f05ffad1dd36bd40561a268c0250627d6e78a3fc
 /.idea
-abase/libs/
-apush/libs/
-apush/src/main/res/drawable/
+/apush/.idea
