--- a/apush/src/main/AndroidManifest.xml
+++ b/apush/src/main/AndroidManifest.xml
@@ -16,6 +16,19 @@
     <uses-permission android:name="cn.itsite.apush.permission.MIPUSH_RECEIVE" />
     <!--以上为小米推送所需权限-->
 
+    <!--以下为华为推送所需权限-->
+    <!--HMS-SDK引导升级HMS功能，访问OTA服务器需要网络权限-->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <!--HMS-SDK引导升级HMS功能，保存下载的升级包需要SD卡写权限-->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <!--检测网络状态-->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <!--检测wifi状态-->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <!--为了获取用户手机的IMEI，用来唯一的标识用户。-->
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <!--以上为华为推送所需权限-->
+
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
@@ -102,17 +115,6 @@
         <!--*********************以上为小米推送配置*********************-->
 
         <!--*********************以下为华为推送配置*********************-->
-        <!--HMS-SDK引导升级HMS功能，访问OTA服务器需要网络权限-->
-        <uses-permission android:name="android.permission.INTERNET" />
-        <!--HMS-SDK引导升级HMS功能，保存下载的升级包需要SD卡写权限-->
-        <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-        <!--检测网络状态-->
-        <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-        <!--检测wifi状态-->
-        <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-        <!--为了获取用户手机的IMEI，用来唯一的标识用户。-->
-        <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-
         <meta-data
             android:name="com.huawei.hms.client.appid"
             android:value="100099829" />
