--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
         debug {
             keyAlias 'agl'
             keyPassword 'aglandroid'
-            storeFile file('E:/Gaocheng/亿社区/agl.keystore')
+            storeFile file('F:/gaocheng/agl.keystore')
             storePassword 'aglandroid'
         }
         release {
@@ -67,70 +67,97 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testCompile 'junit:junit:4.12'
+
     //谷歌官方依赖
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.android.support:design:25.3.1'
+
     //华为、小米、阿里云推送
     debugCompile project(path: ':apush', configuration: 'debug')
     releaseCompile project(path: ':apush', configuration: 'release')
+
     //支付
     debugCompile project(path: ':apayment', configuration: 'debug')
     releaseCompile project(path: ':apayment', configuration: 'release')
+
     //黄油刀系列
     compile 'com.jakewharton:butterknife:8.4.0'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
+
     //自定义二维码
     compile 'com.google.zxing:core:3.2.1'
     compile 'cn.bingoogolapple:bga-qrcodecore:1.1.7@aar'
     compile 'cn.bingoogolapple:bga-zxing:1.1.7@aar'
+
     //底部导航栏
     compile 'com.aurelhubert:ahbottomnavigation:2.0.6'
+
     //地址选择器
     compile 'com.github.chihane:JDAddressSelector:1.1.4'
+
     //图片选择器
     compile 'com.bilibili:boxing-impl:0.7.0'
+
     //switchbutton
     compile 'com.kyleduo.switchbutton:library:1.4.5'
+
     //时间选择器
     compile 'com.contrarywind:Android-PickerView:3.2.4'
+
     //视频播放
     compile 'fm.jiecao:jiecaovideoplayer:5.5.4'
+
     //Banner
     compile 'com.youth.banner:banner:1.4.9'
+
     //监控内存泄露
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5.1'
+
     //监控卡顿
     debugCompile 'com.github.markzhai:blockcanary-android:1.5.0'
+
     //swipelayout
     compile 'com.daimajia.swipelayout:library:1.2.0@aar'
+
     //Gif图加载框架
     compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.7'
+
     //一个底部弹框的级联选择器
     compile 'com.github.leguang:MultiSelector:1.3'
+
     //暂时使用的更新库,配合更新库使用，后期要内化掉。
     compile 'com.qianwen:update-app:3.3.1'
     compile 'com.qianwen:okhttp-utils:3.8.0'
+
     //配合更新库使用，后期要内化掉。
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+
     //todo(高亮)ssssssssssssssssssssss 以下为s1相关 sssssssssssssssssssssssssssss
 
     //progress-button
     compile 'com.github.dmytrodanylyk.circular-progress-button:library:1.1.3'
+
     //页面状态管理
     compile 'com.github.leguang:StateManager:1.1.0'
+
     //高德地图
     compile 'com.amap.api:location:latest.integration'
     compile 'com.amap.api:search:latest.integration'
     compile 'com.amap.api:3dmap:latest.integration'
+
     //摄像头
     compile 'com.p2p.core:p2p-core:0.4.3'
     compile 'com.tbruyelle.rxpermissions:rxpermissions:0.9.4@aar'
+
     //声波配网库
     compile 'com.github.jwkj:SoundWaveSender:v2.0.2'
+
     //声波配网库说依赖的udp通讯库，不可删除
     compile 'com.jwkj:udpsender:v2.0.1'
+
     //自定义车牌键盘。
     compile 'com.github.leguang:AKeyboard:0.0.3'
+
     //orm框架
     compile 'org.litepal.android:core:1.6.0'
 }
