--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,13 +7,13 @@ android {
         debug {
             keyAlias 'agl'
             keyPassword 'aglandroid'
-            storeFile file('F:/gaocheng/agl.keystore')
+            storeFile file('../agl.keystore')
             storePassword 'aglandroid'
         }
         release {
             keyAlias 'agl'
             keyPassword 'aglandroid'
-            storeFile file('E:/Gaocheng/亿社区/agl.keystore')
+            storeFile file('../agl.keystore')
             storePassword 'aglandroid'
         }
     }
