更新了git版本。
Signed-off-by: langmanleguang <langmanleguang@qq.com>

--- a/.gitignore
+++ b/.gitignore
@@ -44,9 +44,9 @@ captures/
 # Intellij
 .idea/workspace.xml
 
-# Keystore files
+# Keystore filesas
 *.jks
 /.idea
 /apush/.idea
 /*.keystore
- 
+     
