--- a/apayment/src/main/AndroidManifest.xml
+++ b/apayment/src/main/AndroidManifest.xml
@@ -2,7 +2,9 @@
 
     package="cn.itsite.apayment">
 
-    <application android:allowBackup="true" android:label="@string/app_name"
+    <application
+        android:allowBackup="true"
+        android:label="@string/app_name"
         android:supportsRtl="true">
 
     </application>
